--- a/.mypy.ini
+++ b/.mypy.ini
@@ -3,3 +3,6 @@ ignore_missing_imports = True
 show_error_codes = True
 disallow_incomplete_defs = True
 disallow_untyped_defs = True
+warn_unused_ignores = True
+install_types = True
+non_interactive = True
