--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 [coverage:report]
 show_missing = True
 fail_under = 100
-skip_covered = False
+skip_covered = True
 
 [coverage:run]
 include = ./*
