--- a/.github/workflows/daily-integration-check.yml
+++ b/.github/workflows/daily-integration-check.yml
@@ -11,6 +11,7 @@ jobs:
     name: Pytest integration check
     env:
       TEST_USER_TOKEN : ${{ secrets.TEST_USER_TOKEN }}
+      TEST_USER_IBMQ_TOKEN : ${{ secrets.TEST_USER_IBMQ_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
