update applications-superstaq req

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@ fail_under = 100
 skip_covered = True
 
 [coverage:run]
-include = ./*
-omit = ./venv/*
+# include = ./qiskit_superstaq/superstaq_backend_test.py
+omit = ./venv/*,*_integration_test.py
 
 
 [flake8]
