--- a/setup.cfg
+++ b/setup.cfg
@@ -7,8 +7,8 @@ fail_under = 100
 skip_covered = True
 
 [coverage:run]
-# include = ./qiskit_superstaq/superstaq_backend_test.py
-omit = ./venv/*,*_integration_test.py
+include = ./*
+omit = ./venv/*
 
 
 [flake8]
