--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,8 +107,28 @@ jobs:
       - name: Pytest check
         run: |
           check/pytest
+              
+  pytest:
+    name: Pytest Windows
+    env:
+      PRIVATE_REPOS_KEY: ${{ secrets.PRIVATE_REPOS_KEY }}
+    runs-on: windows-latest
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+      - name: Pytest check
+        run: |
+          check/pytest
 
   coverage:
+    steps:
     name: Coverage check
     env:
       PRIVATE_REPOS_KEY: ${{ secrets.PRIVATE_REPOS_KEY }}
@@ -127,3 +147,4 @@ jobs:
       - name: Coverage check
         run: |
           check/coverage
+ 
