--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,8 +122,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if ( -f requirements.txt ); then pip install -r requirements.txt; fi
-          if ( -f dev-requirements.txt ); then pip install -r dev-requirements.txt; fi
+          if exist requirements.txt pip install -r requirements.txt
+          if exist dev-requirements.txt pip install -r dev-requirements.txt
       - name: Pytest-win check
         run: |
           check/pytest
