added shell: bash to windows pytest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,6 +127,7 @@ jobs:
       - name: Pytest-win check
         run: |
           check/pytest
+        shell: bash
 
   pytest-mac:
     name: Pytest macOS
