--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ disallow_untyped_defs = True
 warn_unused_ignores = True
 install_types = True
 non_interactive = True
-
+no_implicit_optional = True
 
 [pylint.MAIN]
 max-line-length=100
