--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,8 +90,8 @@ jobs:
         run: |
           check/mypy_.py
 
-  pytest:
-    name: Pytest Ubuntu
+  coverage:
+    name: Pytest and Coverage check
     env:
       PRIVATE_REPOS_KEY: ${{ secrets.PRIVATE_REPOS_KEY }}
     runs-on: ubuntu-latest
@@ -106,9 +106,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install .
           if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
-      - name: Pytest check
+      - name: Coverage check
         run: |
-          check/pytest_.py
+          check/coverage_.py
 
   pytest-mac:
     name: Pytest macOS
@@ -150,26 +150,6 @@ jobs:
         run: |
           check/pytest_.py
         shell: bash
-
-  coverage:
-    name: Coverage check
-    env:
-      PRIVATE_REPOS_KEY: ${{ secrets.PRIVATE_REPOS_KEY }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install .
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
-      - name: Coverage check
-        run: |
-          check/coverage_.py
 
   requirements:
     name: Requirements check
