pip install .[dev] in github workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,7 @@ jobs:
           PRIVATE_REPOS_KEY: ${{ secrets.PRIVATE_REPOS_KEY }}
         run: |
           python -m pip install --upgrade pip
-          pip install .
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          pip install .[dev]
       - name: Format
         run: |
           check/format_.py
@@ -44,8 +43,7 @@ jobs:
           PRIVATE_REPOS_KEY: ${{ secrets.PRIVATE_REPOS_KEY }}
         run: |
           python -m pip install --upgrade pip
-          pip install .
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          pip install .[dev]
       - name: Pylint
         run: |
           check/pylint_.py
@@ -64,8 +62,7 @@ jobs:
           PRIVATE_REPOS_KEY: ${{ secrets.PRIVATE_REPOS_KEY }}
         run: |
           python -m pip install --upgrade pip
-          pip install .
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          pip install .[dev]
       - name: Flake8
         run: |
           check/flake8_.py
@@ -84,8 +81,7 @@ jobs:
           PRIVATE_REPOS_KEY: ${{ secrets.PRIVATE_REPOS_KEY }}
         run: |
           python -m pip install --upgrade pip
-          pip install .
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          pip install .[dev]
       - name: Type check
         run: |
           check/mypy_.py
@@ -104,8 +100,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          pip install .[dev]
       - name: Coverage check
         run: |
           check/coverage_.py
@@ -124,8 +119,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          pip install .[dev]
       - name: Pytest-mac check
         run: |
           check/pytest_.py
@@ -144,8 +138,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if (Test-Path "requirements.txt") {pip install -r requirements.txt}
-          if (Test-Path "dev-requirements.txt") {pip install -r dev-requirements.txt}
+          pip install .[dev]
       - name: Pytest-win check
         run: |
           check/pytest_.py
@@ -166,8 +159,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .
-          if [ -f dev-requirements.txt ]; then pip install -r dev-requirements.txt; fi
+          pip install .[dev]
       - name: Coverage check
         run: |
           check/requirements.py
